[package]
name = "tide-openssl"
version = "0.1.0"
authors = ["victorcwai"]
edition = "2018"
description = "tide openssl listener based on async-std-openssl. Based on http-rs/tide-rustls"
readme = "README.md"
repository = "https://github.com/victorcwai/tide-openssl"
documentation = "https://docs.rs/tide-openssl"
license = "MIT OR Apache-2.0"
keywords = ["tide", "https", "tls", "openssl"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
async-std = "1.9"
tide = { version = "0.16", default-features = false }
async-h1 = "2.3"
async-dup = "1.2"
openssl = "0.10"
openssl-sys = "0.9"
futures-util = { version = "0.3", default-features = false }
async-std-openssl = "^0.6.3"
